[tool.poetry]
name = "keh-tech-audit-tool-api"
version = "0.1.1"
description = ""
authors = ["ONS-Innovation keh-dev"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-wsgi = "^0.2.7"
Flask = "^3.0.3"
flask-restx = "^1.3.0"
boto3 = "^1.35.37"
requests = "^2.32.3"
botocore = "^1.35.38"
pyjwt = "^2.9.0"
cryptography = "^46.0.5"
python-dotenv = "^1.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
ruff = "^0.6.9"
pylint = "^3.3.1"
mypy = "^1.11.2"
pytest = "^8.3.3"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.6.1"
mkdocs-material = "9.5.34"
mkdocstrings-python = "1.11.1"
pymdown-extensions = "10.7"
mkdocs-material-extensions = "1.3"
mkdocs-swagger-ui-tag = "0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
